# backend-axum-template

./: .env  .gitattributes  .gitignore  Cargo.toml  LICENSE  project.md  readme.md
config/: develop.yaml  production.yaml
config/errcodes/: admin.yaml  common.yaml  params.yaml
src/: main.rs
src/config/: mod.rs  rsa_key.rs
src/constant/: mod.rs
src/controllers/: admin.rs  mod.rs
src/dto/: admin.rs
src/logging/: mod.rs
src/middleware/: app_middleware.rs  app_response.rs  app_state.rs  mod.rs
src/repository/: mod.rs
src/repository/entity/: mod.rs  prelude.rs  tb_admin.rs  tb_alarm_type.rs  tb_check_content.rs  tb_check_point.rs  tb_device.rs  tb_device_check_point.rs  tb_device_model.rs  tb_device_record.rs  tb_project.rs  tb_project_check_content.rs  tb_role.rs
src/repository/redis/: connect.rs  mod.rs  mode.rs
src/repository/sql/: init.sql
src/service/: admin.rs  auth.rs
