[package]
name = "template-detector"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.34"
tokio = { version = "1.46.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.17.0", features = ["v4"] }
utoipa = "5.4.0"
futures = "0.3.31"
once_cell = "1.21.3"
deadpool-redis = "0.22.0"
sea-orm = {version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"]}
sea-orm-migration = { version = "1.1.19", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
anyhow = "1.0.100"
redis = "0.32.7"
rsa = "0.9.9"
sha2 = "0.10.9"
rand = { version = "0.8", features = ["std"] }
rand_core = "0.6"
hmac = "0.12.1"
hex = "0.4.3"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto","rsa","pem"] }
chrono = "0.4.42"
validator = {version = "0.20.0", features = ["derive"]}
regex = "1.12.2"
